terraform/main.tf
#############################
# VPC
#############################

resource "aws_vpc" "wanderlust" {

  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "wanderlust-vpc"
  }
}

#############################
# Public Subnet
#############################

resource "aws_subnet" "public" {

  vpc_id                  = aws_vpc.wanderlust.id
  cidr_block              = var.public_subnet_cidr
  availability_zone       = var.availability_zone
  map_public_ip_on_launch = true

  tags = {
    Name = "wanderlust-public-subnet"
  }
}

#############################
# Internet Gateway
#############################

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.wanderlust.id

  tags = {
    Name = "wanderlust-igw"
  }
}

#############################
# Route Table
#############################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.wanderlust.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "wanderlust-public-route-table"
  }
}

#############################
# Route Table Association
#############################

resource "aws_route_table_association" "public" {

  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

#############################
# Security Group
#############################

resource "aws_security_group" "wanderlust" {

  name        = "wanderlust-security-group"
  description = "Security Group for Wanderlust"
  vpc_id      = aws_vpc.wanderlust.id

  ingress {
    description = "SSH"

    from_port = 22
    to_port   = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"

    from_port = 80
    to_port   = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"

    from_port = 443
    to_port   = 443

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Backend"

    from_port = 5000
    to_port   = 5000

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "wanderlust-security-group"
  }
}

#############################
# EC2 Instance
#############################

resource "aws_instance" "wanderlust" {

  ami           = var.ami_id
  instance_type = var.instance_type

  subnet_id = aws_subnet.public.id

  key_name = var.key_name

  associate_public_ip_address = true

  vpc_security_group_ids = [
    aws_security_group.wanderlust.id
  ]

  user_data = <<-EOF
#!/bin/bash
apt update -y
apt install -y docker.io docker-compose-v2 git

systemctl enable docker
systemctl start docker

usermod -aG docker ubuntu
EOF

  tags = {
    Name = "wanderlust-server"
  }
}
